cluster/eck/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: eck
  labels:
    app: kibana
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.jestenok.com
  rules:
    - host: kibana.jestenok.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  number: 5601
